# Relativistic-Hypercomputing-Visualiser

./: .gitignore  CMakeLists.txt  README.md
cmake/: Dependencies.cmake
src/: main.cpp
src/app/: Application.cpp  Application.h  main.cpp
src/core/: MinkowskiDemoScene.cpp  MinkowskiDemoScene.h  ObserverMotion.cpp  ObserverMotion.h  OperationalStateBuilder.cpp  OperationalStateBuilder.h  ProperTime.cpp  ProperTime.h  SignalPropagation.cpp  SignalPropagation.h  ToyBlackHoleSpatialModel.cpp  ToyBlackHoleSpatialModel.h
src/models/: BootTelemetry.h  FrameVisualState.h  MinkowskiDiagramModel.h  OperationalState.h  SpatialViewState.h  ToyBlackHoleRegionModel.h
src/render2d/: MinkowskiDiagramRenderer.cpp  MinkowskiDiagramRenderer.h
src/render3d/: SpatialViewportRenderer.cpp  SpatialViewportRenderer.h
src/ui/: BootPanel.cpp  BootPanel.h  HybridLayout.cpp  HybridLayout.h  HybridScreen.cpp  HybridScreen.h  PanelFrame.cpp  PanelFrame.h  SchematicTelemetryPanel.cpp  SchematicTelemetryPanel.h  ScreenEffects.cpp  ScreenEffects.h  Theme.cpp  Theme.h
